[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"
description = "Multi-tool WASM module: image processing, hashing, QR code generation"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
base64 = "0.22"
console_error_panic_hook = "0.1"

# 哈希
md-5 = "0.10"
sha2 = "0.10"
blake3 = "1.5"

# 二维码
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[profile.release]
opt-level = "s"
lto = true
